[package]
name = "basic-xlsx-reader"
version = "0.3.0"
edition = "2021"
authors = ["Robert Ozimek <robertozimek90@gmail.com>"]
repository = "https://github.com/robertozimek/basic-xlsx-reader"
keywords = ["excel", "excel-reader", "xlsx", "xlsx-reader", "read-xlsx"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.95"
calamine = "0.26.1"
js-sys = "0.3.72"
bytes = { version = "1", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
tsify = "0.4.5"
